--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       <meta name="author" content="Remy Skelton">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Space Aliens</title>
-      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-      <link rel="manifest" href="site.webmanifest">
+      <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+      <link rel="manifest" href="./favicon/site.webmanifest">
     </head>
     <body>
-      <!-- the last realse is o  the website: https://phaser.io/download/stable -->
+      <!-- the last realse is on the website: https://phaser.io/download/stable -->
       <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
       <script type="module" src="js/game.js"></script>
     </body>
