--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-  <html lang="en-ca">
-    <head>
-      <meta charset="utf-8">
-      <meta name="description" content="Space Aliens Game">
-      <meta name="keywords" content="immaculata, ics2o">
-      <meta name="author" content="Remy Skelton">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Space Aliens</title>
-      <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-      <link rel="manifest" href="./favicon/site.webmanifest">
-    </head>
-    <body>
-      <!-- the last realse is on the website: https://phaser.io/download/stable -->
-      <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
-      <script type="module" src="js/game.js"></script>
-    </body>
-  </html>
+<html lang="en-ca">
+  <head>
+    <!-- Meta Data -->
+    <meta charset="utf-8">
+    <meta name="description" content="Space Aliens Game">
+    <meta name="keywords" content="immaculata, ics2o">
+    <meta name="author" content="Remy Skelton">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title-->
+    <title>Space Aliens</title>
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+  </head>
+  <body>
+    <!-- the last realse is on the website: https://phaser.io/download/stable -->
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script type="module" src="js/game.js"></script>
+    <div id ="Alien"></div>
+  </body>
+</html>
