--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <!--Title-->
     <title>Space Aliens</title>
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png">
+    <link rel="manifest" href="./fav_index/site.webmanifest">
   </head>
   <body>
     <!-- the last realse is on the website: https://phaser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
     <script type="module" src="js/game.js"></script>
-    <div id ="Alien"></div>
+    <div id ="splash-alien"></div>
+    <div id ="image-alien">
+    </div>
   </body>
 </html>
