--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
   <body>
     <!-- the last realse is on the website: https://phaser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
-    <script type="module" src="js/game.js"></script>
-    <div id ="splash-alien"></div>
-    <div id ="image-alien">
-    </div>
+    <script type="module" src="./js/game.js"></script>
   </body>
 </html>
