--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Remy Skelton">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
-    <title>Space Aliens</title>
+    <title>Ballon D'or</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png" />
@@ -18,6 +18,6 @@
   <body>
     <!-- the last realse is on the website: https://phaser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
-    <script type="module" src="./js/game.js"></script>
+    <script type="module" src="js/game.js"></script>
   </body>
 </html>
