--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta Data -->
     <meta charset="utf-8">
-    <meta name="description" content="Space Aliens Game">
+    <meta name="description" content="Ballon D'or">
     <meta name="keywords" content="immaculata, ics2o">
     <meta name="author" content="Remy Skelton">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
